Connect WebAutomationSession to its backend dispatcher as if it were an agent and add stub implementations https://bugs.webkit.org/show_bug.cgi?id=154518 <rdar://problem/24761096>

Reviewed by Timothy Hatcher.

Source/JavaScriptCore:

* inspector/InspectorBackendDispatcher.h:
Export all the classes since they are used by WebKit::WebAutomationSession.

Source/WebKit2:

Add a domain dispatcher for the 'Automation' domain, and register the
WebAutomationSession itself as the handler for Automation commands.
Stub out these command implementations so the code will compile.

* UIProcess/Automation/Automation.json:
Fix the createWindow command's parameters and description.
Add an ErrorMessage string enumeration and document how it can be used
to signal well-known errors to the frontend.

* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::WebAutomationSession):
Add the domain backend dispatcher. It further parses commands that were deemed
valid by the generic dispatcher and match the 'Automation' domain prefix.

(WebKit::WebAutomationSession::getWindows):
(WebKit::WebAutomationSession::openWindow):
(WebKit::WebAutomationSession::closeWindow):
Stub these out with our new ErrorMessage enumeration and a macro to
make this code pattern more readable.

* UIProcess/Automation/WebAutomationSession.h:
Add new declarations and members.


Canonical link: https://commits.webkit.org/172686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196980 268f45cc-cd09-0410-ab3c-d52691b4dbfc